--- a/app/src/main/res/layout/cotizacion_list_item.xml
+++ b/app/src/main/res/layout/cotizacion_list_item.xml
@@ -50,4 +50,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_dialog_map" />
 
+    <ImageView
+        android:id="@+id/btnIniciarChat"
+        android:layout_width="53dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_send" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
