--- a/app/src/main/res/layout/activity_cotizacion_chat.xml
+++ b/app/src/main/res/layout/activity_cotizacion_chat.xml
@@ -6,8 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".CotizacionChat">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerCharla"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerCharla"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:gravity="bottom">
+
+            <EditText
+                android:id="@+id/inputMSJText"
+                android:layout_width="336dp"
+                android:layout_height="63dp"
+                android:ems="10"
+                android:hint="Hola, me gustaria saber su precio"
+                android:inputType="textPersonName" />
+
+            <ImageButton
+                android:id="@+id/btnSensMessage"
+                android:layout_width="75dp"
+                android:layout_height="match_parent"
+                app:srcCompat="@android:drawable/ic_menu_send" />
+        </LinearLayout>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
