--- a/app/src/main/res/layout/activity_cotizacion_chat.xml
+++ b/app/src/main/res/layout/activity_cotizacion_chat.xml
@@ -22,6 +22,41 @@
             android:layout_weight="1" />
 
         <LinearLayout
+            android:id="@+id/layoutCotizacion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txtPrecioCotizacion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="TextView" />
+
+            <Button
+                android:id="@+id/btnAceptar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:background="#4CAF50"
+                android:backgroundTint="#4CAF50"
+                android:text="Aceptar"
+                android:textColor="#4CAF50" />
+
+            <Button
+                android:id="@+id/btnRechazarCotizacion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:background="#F44336"
+                android:backgroundTint="#F44336"
+                android:text="Rechazar"
+                android:textColor="#F44336" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
