--- a/app/src/main/res/layout/activity_cotizacion_chat.xml
+++ b/app/src/main/res/layout/activity_cotizacion_chat.xml
@@ -62,11 +62,21 @@
             android:layout_gravity="bottom"
             android:gravity="bottom">
 
+            <ImageButton
+                android:id="@+id/imageButton"
+                android:layout_width="78dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                app:srcCompat="@android:drawable/ic_menu_gallery" />
+
             <EditText
                 android:id="@+id/inputMSJText"
                 android:layout_width="336dp"
                 android:layout_height="63dp"
+                android:layout_weight="1"
                 android:ems="10"
+                android:gravity="top"
                 android:hint="Hola, me gustaria saber su precio"
                 android:inputType="textPersonName" />
 
@@ -74,6 +84,7 @@
                 android:id="@+id/btnSensMessage"
                 android:layout_width="75dp"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 app:srcCompat="@android:drawable/ic_menu_send" />
         </LinearLayout>
     </LinearLayout>
