--- a/app/src/main/res/layout/activity_seleccionar_ubicacion.xml
+++ b/app/src/main/res/layout/activity_seleccionar_ubicacion.xml
@@ -40,7 +40,7 @@
                 android:inputType="textPersonName" />
 
             <Button
-                android:id="@+id/btnEnviarUbicacion"
+                android:id="@+id/btnEnviarUbicacionChat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Enviar ubicacion" />
